add methods to rest api, updating swagger, fix date range problems of program entries
