# docs/openapi2-oer-server-web.json
@@ -14,7 +14,7 @@
       "url": "http://www.gnu.org/licenses/agpl-3.0.de.html"
     }
   },
-  "host": "localhost:8081",
+  "host": "127.0.0.1:8081",
   "basePath": "/",
   "tags": [
     {
@@ -197,12 +197,82 @@
         "deprecated": false
       }
     },
+    "/v1/program/tomorrow": {
+      "get": {
+        "tags": [
+          "status-controller"
+        ],
+        "summary": "allTomorrowProgramEntries",
+        "operationId": "allTomorrowProgramEntriesUsingGET",
+        "produces": [
+          "*/*"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/ProgramEntry"
+              }
+            }
+          },
+          "500": {
+            "description": "500 message",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        },
+        "deprecated": false
+      }
+    },
+    "/v1/program/tomorrow/{channelId}": {
+      "get": {
+        "tags": [
+          "status-controller"
+        ],
+        "summary": "tomorrowProgramEntriesByChannel",
+        "operationId": "tomorrowProgramEntriesByChannelUsingGET",
+        "produces": [
+          "*/*"
+        ],
+        "parameters": [
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "channelId",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/ProgramEntry"
+              }
+            }
+          },
+          "500": {
+            "description": "500 message",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        },
+        "deprecated": false
+      }
+    },
     "/v1/program": {
       "get": {
         "tags": [
           "status-controller"
         ],
-        "summary": "Get program data",
+        "summary": "programEntries",
         "operationId": "programEntriesUsingGET",
         "produces": [
           "*/*"
@@ -343,6 +413,11 @@
     },
     "Error": {
       "type": "object",
+      "properties": {
+        "message": {
+          "type": "string"
+        }
+      },
       "title": "Error"
     },
     "ImageLink": {
