# oer-collector-server/src/main/java/org/emschu/oer/oerserver/controller/StatusController.java
@@ -10,12 +10,12 @@ package org.emschu.oer.oerserver.controller;
  * it under the terms of the GNU Affero General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * #L%
@@ -37,6 +37,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Optional;
 import java.util.logging.Logger;
@@ -80,12 +81,27 @@ public class StatusController {
         return new ResponseEntity<>(programService.getCompleteDailyProgram(LocalDate.now()), HttpStatus.ACCEPTED);
     }
 
+    @GetMapping("/program/tomorrow")
+    public ResponseEntity<List<ProgramEntry>> allTomorrowProgramEntries() {
+        return new ResponseEntity<>(programService.getCompleteDailyProgram(LocalDate.now().plus(1, ChronoUnit.DAYS)),
+                HttpStatus.ACCEPTED);
+    }
+
     @GetMapping("/program/daily/{channelId}")
     public ResponseEntity<List<ProgramEntry>> dailyProgramEntriesByChannel(@PathVariable Long channelId) {
         if (channelId == null) {
             return ResponseEntity.badRequest().build();
         }
         return new ResponseEntity<>(programService.getDayProgramByChannelId(LocalDate.now(), channelId), HttpStatus.ACCEPTED);
+    }
+
+    @GetMapping("/program/tomorrow/{channelId}")
+    public ResponseEntity<List<ProgramEntry>> tomorrowProgramEntriesByChannel(@PathVariable Long channelId) {
+        if (channelId == null) {
+            return ResponseEntity.badRequest().build();
+        }
+        return new ResponseEntity<>(programService.getDayProgramByChannelId(LocalDate.now().plus(1, ChronoUnit.DAYS), channelId),
+                HttpStatus.ACCEPTED);
     }
 
     @GetMapping("/program")
